--- a/reels.html
+++ b/reels.html
@@ -211,6 +211,74 @@ z-index: 2;
   display: flex;
   flex-direction: column;
 }
+@media (max-width: 768px) {
+  html, body {
+    height: auto;
+    overflow: auto;
+    background-color: #eeeeee;
+  }
+
+  .layout-wrapper {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  #live-stats {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0;
+    width: 100%;
+    padding: 10px 6px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, auto);
+    font-size: 0.75rem;
+    text-align: center;
+    gap: 4px;
+    background-color: #1a1a1a;
+    z-index: 1000;
+    border-radius: 0;
+  }
+
+  #app-frame {
+    width: 100%;
+    height: 100%;
+    background-color: #0f0f0f;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    margin-top: 140px; /* push reels down after stats bar */
+  }
+
+  .content-wrapper {
+    flex: 1;
+    overflow-y: auto;
+    scroll-snap-type: y mandatory;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  .reel {
+    min-height: 100vh;
+    scroll-snap-align: start;
+  }
+
+  .bottom-nav {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #1a1a1a;
+    border-top: 1px solid #333;
+    display: flex;
+    justify-content: space-around;
+    padding: 0.5rem 0;
+    z-index: 1000;
+  }
+}
 
 </style>
 <script src="https://unpkg.com/lucide@latest"></script>
