--- a/reels.html
+++ b/reels.html
@@ -215,6 +215,8 @@ z-index: 2;
   html, body {
     height: auto;
     overflow: auto;
+    margin: 0;
+    padding: 0;
     background-color: #eeeeee;
   }
 
@@ -222,8 +224,6 @@ z-index: 2;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    margin: 0;
-    padding: 0;
   }
 
   #live-stats {
@@ -231,40 +231,45 @@ z-index: 2;
     top: 0;
     left: 0;
     right: 0;
-    margin: 0;
-    width: 100%;
-    padding: 10px 6px;
+    background-color: #1a1a1a;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(5, auto);
+    padding: 10px 6px;
     font-size: 0.75rem;
     text-align: center;
     gap: 4px;
-    background-color: #1a1a1a;
     z-index: 1000;
     border-radius: 0;
+    margin: 0;
   }
 
   #app-frame {
     width: 100%;
-    height: 100%;
+    border-radius: 0;
+    margin-top: 140px;
     background-color: #0f0f0f;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
-    margin-top: 140px; /* push reels down after stats bar */
+    min-height: 100vh;
   }
 
   .content-wrapper {
     flex: 1;
     overflow-y: auto;
     scroll-snap-type: y mandatory;
-    -webkit-overflow-scrolling: touch;
+  }
+
+  #reelWrapper {
+    display: flex;
+    flex-direction: column;
   }
 
   .reel {
     min-height: 100vh;
     scroll-snap-align: start;
+    background-color: #000;
   }
 
   .bottom-nav {
@@ -279,6 +284,7 @@ z-index: 2;
     z-index: 1000;
   }
 }
+
 
 </style>
 <script src="https://unpkg.com/lucide@latest"></script>
@@ -301,8 +307,11 @@ z-index: 2;
 
 
 <div id="app-frame">
-<div class="content-wrapper" id="reelWrapper">
-</div> <!-- closes .content-wrapper -->
+<div class="content-wrapper">
+  <div style="height: 130px;"></div> <!-- Spacer so reels don't go under stats -->
+  <div id="reelWrapper"></div> <!-- Reels get inserted here -->
+</div>
+
 
 <div class="bottom-nav">
 <a href="index.html"><i data-lucide="home"></i></a>
@@ -507,6 +516,7 @@ document.addEventListener("DOMContentLoaded", () => {
   trackVisibleReels();
   lucide.createIcons();
 });
+
 
 
 </script>
