--- a/reels.html
+++ b/reels.html
@@ -222,26 +222,24 @@ z-index: 2;
   }
 
   /* Top stats bar, always visible */
-  #live-stats {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    margin: 0;
-    padding: 10px 6px;
-    font-size: 0.75rem;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, auto);
-    text-align: center;
-    gap: 4px;
-    background-color: #1a1a1a;
-    z-index: 1000;
-    border-radius: 0;
-  }
-
-
+#live-stats {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  margin: 0;
+  padding: 10px 6px;
+  font-size: 0.75rem;
+  display: grid !important;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(5, auto);
+  text-align: center;
+  gap: 4px;
+  background-color: #1a1a1a;
+  z-index: 1000;
+  border-radius: 0;
+}
 
   /* Move the app content below the fixed stats bar */
   #app-frame {
@@ -269,16 +267,16 @@ z-index: 2;
     flex-direction: column;
   }
 
-  .reel {
-    width: 100vw;
-    height: calc(100vh - 170px); /* adjust for stats and nav */
-    scroll-snap-align: start;
-    background-color: #000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-  }
+.reel {
+  width: 100vw;
+  height: calc(100vh - 170px);
+  scroll-snap-align: start;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
 
   /* Bottom nav bar stays pinned */
   .bottom-nav {
@@ -292,6 +290,16 @@ z-index: 2;
     padding: 0.5rem 0;
     z-index: 1000;
   }
+   body::before {
+  content: "MOBILE VIEW";
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  color: red;
+  z-index: 9999;
+  font-size: 12px;
+}
+
 }
 
 
