--- a/reels.html
+++ b/reels.html
@@ -9,15 +9,17 @@
 <style>
 * { box-sizing: border-box; margin: 0; padding: 0; }
 html, body {
-height: 100%;
-overflow: hidden;
-background-color: #eeeeee;
-color: #fff;
-font-family: Arial, sans-serif;
-display: flex;
-justify-content: center;
-align-items: center;
+  width: 100%;
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #eeeeee;
+  color: #fff;
+  font-family: Arial, sans-serif;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
+
 .layout-wrapper {
 display: flex;
 justify-content: center;
