--- a/reels.html
+++ b/reels.html
@@ -207,25 +207,28 @@ z-index: 2;
 20% { opacity: 1; }
 100% { opacity: 0; transform: translateX(-50%) translateY(-20px); }
 }
-  @media (max-width: 768px) {
-  body {
-    overflow: auto;
-    align-items: flex-start;
+ @media (max-width: 768px) {
+  body, html {
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    overflow-x: hidden;
   }
 
   .layout-wrapper {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    width: 100vw;
     height: auto;
     min-height: 100vh;
   }
 
   #live-stats {
-    width: 100%;
+    width: 100vw;
     background: #1a1a1a;
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 2 columns now */
+    grid-template-columns: 1fr 1fr; /* 2 columns */
     grid-template-rows: repeat(5, auto); /* 5 rows */
     gap: 10px;
     padding: 10px;
@@ -247,31 +250,36 @@ z-index: 2;
   }
 
   #app-frame {
-    width: 100%;
-    height: auto;
+    width: 100vw;
+    height: 100vh;
     min-height: 100vh;
     border-radius: 0;
     display: flex;
     flex-direction: column;
+    background: #0f0f0f;
   }
 
   .content-wrapper {
     flex: 1;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
-    scroll-behavior: auto;
-    padding-top: 0; /* no extra space */
-    height: 100vh; /* important: full viewport height */
+    scroll-behavior: auto; /* no smooth scroll */
+    height: 100vh;
+    width: 100vw;
+    padding: 0;
   }
 
   .reel {
     scroll-snap-align: start;
-    min-height: 100vh; /* 🔥 each reel fills the screen */
     height: 100vh;
+    min-height: 100vh;
+    width: 100vw;
+    background: #000;
   }
 
   .reel-inner {
     height: 100%;
+    width: 100%;
   }
 
   .bottom-nav {
@@ -279,9 +287,12 @@ z-index: 2;
     bottom: 0;
     left: 0;
     right: 0;
+    width: 100vw;
     border-radius: 0;
+    background-color: #1a1a1a;
   }
 }
+
 
 
 </style>
