--- a/reels.html
+++ b/reels.html
@@ -266,23 +266,23 @@ gap: 4px;
   }
 
 .content-wrapper {
-  flex: 1;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
   scroll-behavior: auto;
-  height: calc(100vh - 80px); /* 🔥 shorter to allow space */
   width: 100vw;
   padding: 0;
 }
 
 
- .reel {
+
+.reel {
   scroll-snap-align: start;
-  height: calc(100vh - 80px); /* 🔥 same shorter height */
-  min-height: calc(100vh - 80px);
+  height: calc(100vh - 140px); /* 🔥 Adjust this to whatever looks good */
+  min-height: calc(100vh - 140px);
   width: 100vw;
   background: #000;
 }
+
 
 
 
