--- a/reels.html
+++ b/reels.html
@@ -123,14 +123,14 @@ text-shadow: 0 0 6px #000;
 max-width: 80%;
 }
 .user-info {
-transition: transform 0.3s ease;
-display: flex;
-align-items: center;
-position: absolute;
-bottom: 80px;
-left: 10px;
-text-decoration: none;
-color: inherit;
+  transition: transform 0.3s ease;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: 120px; /* 🔥 was 80px before — move it up */
+  left: 10px;
+  text-decoration: none;
+  color: inherit;
 }
 
 .user-info img {
@@ -146,13 +146,13 @@ font-size: 0.9rem;
 color: #ccc;
 }
 .actions {
-position: absolute;
-bottom: 80px;
-right: 10px;
-display: flex;
-flex-direction: column;
-gap: 15px;
-transition: transform 0.3s ease;
+  position: absolute;
+  bottom: 120px; /* 🔥 was 80px before — move it up */
+  right: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  transition: transform 0.3s ease;
 }
 .actions button {
 background: none;
