--- a/reels.html
+++ b/reels.html
@@ -207,7 +207,20 @@ z-index: 2;
 20% { opacity: 1; }
 100% { opacity: 0; transform: translateX(-50%) translateY(-20px); }
 }
- @media (max-width: 768px) {
+@media (max-width: 768px) {
+  .caption-center {
+    padding-bottom: 60px; /* push up text a little to stay clear */
+  }
+
+  .user-info {
+    bottom: 100px; /* move profile and username higher */
+  }
+
+  .actions {
+    bottom: 100px; /* move action buttons higher */
+  }
+}
+
   body, html {
     margin: 0;
     padding: 0;
