--- a/reels.html
+++ b/reels.html
@@ -100,16 +100,17 @@ align-items: center;
 position: relative;
 }
 .reel-inner {
-width: 100%;
-height: 100%;
-background-color: #1c1c1c;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 0;
-position: relative;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto; /* 🔥 allow inner scrolling */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 160px; /* 🔥 space for profile/actions */
 }
+
 .caption-center {
 position: absolute;
 top: 50%;
@@ -123,12 +124,11 @@ text-shadow: 0 0 6px #000;
 max-width: 80%;
 }
 .user-info {
-  transition: transform 0.3s ease;
+  position: absolute;
+  bottom: 70px; /* 🔥 pinned above bottom nav */
+  left: 10px;
   display: flex;
   align-items: center;
-  position: absolute;
-  bottom: 120px; /* 🔥 was 80px before — move it up */
-  left: 10px;
   text-decoration: none;
   color: inherit;
 }
@@ -147,12 +147,12 @@ color: #ccc;
 }
 .actions {
   position: absolute;
-  bottom: 120px; /* 🔥 was 80px before — move it up */
+  bottom: 70px; /* 🔥 pinned above bottom nav */
   right: 10px;
   display: flex;
   flex-direction: column;
   gap: 15px;
-  transition: transform 0.3s ease;
+}
 }
 .actions button {
 background: none;
