--- a/reels.html
+++ b/reels.html
@@ -153,7 +153,6 @@ color: #ccc;
   flex-direction: column;
   gap: 15px;
 }
-}
 .actions button {
 background: none;
 border: none;
@@ -281,10 +280,18 @@ z-index: 2;
     background: #000;
   }
 
-  .reel-inner {
-    height: 100%;
-    width: 100%;
-  }
+ .reel-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 160px; /* makes space for profile + action buttons */
+}
+
 
   .caption-center {
     padding-bottom: 80px; /* Push up caption */
