--- a/reels.html
+++ b/reels.html
@@ -92,7 +92,7 @@ font-size: 1.3rem;
 .reel {
 scroll-snap-align: start;
 height: 100%;
-background-color: #0f0f0f;
+background-color: #1c1c1c;
 display: flex;
 justify-content: center;
 align-items: center;
