--- a/reels.html
+++ b/reels.html
@@ -276,7 +276,7 @@ z-index: 2;
   width: 100vw;
   height: calc(100vh - 120px); /* 🔥 a little shorter than full screen */
   min-height: calc(100vh - 120px);
-  background: #000;
+  background: #1c1c1c;
   display: flex;
   justify-content: center;
   align-items: center;
