--- a/reels.html
+++ b/reels.html
@@ -271,17 +271,18 @@ z-index: 2;
     padding: 0;
   }
 
- .reel {
+.reel {
   scroll-snap-align: start;
   width: 100vw;
-  height: calc(100vh - 120px); /* 🔥 a little shorter than full screen */
-  min-height: calc(100vh - 120px);
-  background: #1c1c1c;
+  height: calc(100vh - 130px); /* 🔥 adjust to match mobile layout */
+  min-height: calc(100vh - 130px);
+  background-color: #1c1c1c;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
 }
+
 
 
  .reel-inner {
