--- a/reels.html
+++ b/reels.html
@@ -343,6 +343,16 @@ z-index: 2;
     align-items: center;
     z-index: 100;
   }
+  .comment-box {
+  position: absolute;
+  bottom: 80px; /* 🔥 for mobile, lifted up */
+  left: 10px;
+  right: 10px;
+  display: none;
+  gap: 10px;
+  z-index: 10;
+}
+
 }
 
 
