--- a/reels.html
+++ b/reels.html
@@ -313,7 +313,7 @@ z-index: 2;
 
   .user-info {
   position: absolute;
-  bottom: 40px; /* Adjust depending on nav bar height */
+  bottom: 0px; /* Adjust depending on nav bar height */
   left: 10px;
   display: flex;
   align-items: center;
@@ -323,7 +323,7 @@ z-index: 2;
 
  .actions {
   position: absolute;
-  bottom: 40px; /* Match user-info */
+  bottom: 0px; /* Match user-info */
   right: 10px;
   display: flex;
   flex-direction: column;
@@ -344,13 +344,13 @@ z-index: 2;
     z-index: 100;
   }
   .comment-box {
-  position: absolute;
-  bottom: 60px; /* 🔥 for mobile, lifted up */
-  left: 10px;
-  right: 10px;
+  position: fixed;
+  bottom: 0px; /* 🔥 for mobile, lifted up */
+  left: 0px;
+  right: 0px;
   display: none;
-  gap: 8px;
-  z-index: 10;
+  gap: 0px;
+  z-index: 1000;
 }
 
 }
