--- a/reels.html
+++ b/reels.html
@@ -348,6 +348,7 @@ z-index: 2;
   bottom: 0px; /* 🔥 for mobile, lifted up */
   left: 0px;
   right: 0px;
+  padding: 10px 10px 70px 10px; 
   display: none;
   gap: 10px;
   z-index: 1000;
