--- a/profile.html
+++ b/profile.html
@@ -238,9 +238,9 @@
     gap: 4px;
   }
 
-  #profile-content {
-    padding-top: 140px; /* 🔥 Push down profile content below stats bar */
-  }
+ #profile-content {
+  padding-top: 200px;
+}
 
 }
 
