--- a/profile.html
+++ b/profile.html
@@ -218,14 +218,15 @@
       border-color: #f44;
       box-shadow: 0 0 8px #f44;
     }
-   @media (max-width: 768px) {
+  @media (max-width: 768px) {
 
-  body, html {
+  html, body {
     margin: 0;
     padding: 0;
     width: 100vw;
     height: 100vh;
-    overflow: hidden; /* 🔥 important for mobile layout */
+    background-color: #0f0f0f; /* 🔥 Force dark background everywhere */
+    overflow: hidden;
   }
 
   #live-stats {
@@ -248,14 +249,31 @@
 
   #profile-content {
     position: absolute;
-    top: 140px; /* 🔥 start BELOW the live stats */
-    bottom: 60px; /* 🔥 end ABOVE the bottom nav */
+    top: 180px; /* 🔥 Higher so it fully clears live-stats */
+    bottom: 60px; /* 🔥 Leaves room for bottom nav */
     left: 0;
     right: 0;
-    overflow-y: auto; /* 🔥 allow scrolling */
+    overflow-y: auto;
+    background-color: #0f0f0f; /* 🔥 Clean dark background */
     padding: 10px;
+    min-height: calc(100vh - 240px); /* 🔥 Makes sure page is tall enough */
     box-sizing: border-box;
   }
+
+  .bottom-nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    width: 100%;
+    background-color: #1a1a1a;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 1000;
+  }
+
 }
 
   </style>
