--- a/profile.html
+++ b/profile.html
@@ -249,7 +249,7 @@
 
   #profile-content {
     position: absolute;
-    top: 180px; /* 🔥 Higher so it fully clears live-stats */
+    top: 230; /* 🔥 Higher so it fully clears live-stats */
     bottom: 60px; /* 🔥 Leaves room for bottom nav */
     left: 0;
     right: 0;
