--- a/profile.html
+++ b/profile.html
@@ -249,7 +249,7 @@
 
   #profile-content {
     position: absolute;
-    top: 50; /* 🔥 Higher so it fully clears live-stats */
+    top: 200px; /* 🔥 Higher so it fully clears live-stats */
     bottom: 60px; /* 🔥 Leaves room for bottom nav */
     left: 0;
     right: 0;
@@ -271,7 +271,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    z-index: 1000;
+    z-index: 100;
   }
 
 }
