--- a/profile.html
+++ b/profile.html
@@ -267,6 +267,24 @@
     align-items: center;
     z-index: 1000;
   }
+.layout-wrapper {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  height: auto;
+  min-height: 100vh;
+}
+
+#app-frame {
+  width: 100%;
+  height: auto;
+  min-height: 100vh;
+  border-radius: 0;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  background-color: #0f0f0f;
+}
 
 }
 
