--- a/profile.html
+++ b/profile.html
@@ -220,15 +220,15 @@
     }
  @media (max-width: 768px) {
 
-  html, body {
-    margin: 0;
-    padding: 0;
-    width: 100vw;
-    height: 100%;
-    background-color: #0f0f0f; /* dark background */
-    overflow-x: hidden;
-  }
-
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100%;
+  background-color: #0f0f0f;
+  overflow-x: hidden; /* only hide sideways scrolling */
+  overflow-y: auto; /* 🔥 allow vertical scrolling */
+}
   #live-stats {
     position: fixed;
     top: 0;
