--- a/user.html
+++ b/user.html
@@ -247,12 +247,12 @@ html, body {
 <div class="stat-grid" id="statGrid"></div>
 </div>
 
-<div class="bottom-nav">
-<a href="index.html">🏠</a>
-<a href="search.html">🔍</a>
-<a href="publish.html">➕</a>
-<a href="reels.html">🎞️</a>
-<a href="profile.html">👤</a>
+ <div class="bottom-nav">
+  <a href="index.html"><i data-lucide="home"></i></a>
+  <a href="search.html"><i data-lucide="search"></i></a>
+  <a href="publish.html"><i data-lucide="plus-circle"></i></a>
+  <a href="reels.html"><i data-lucide="video"></i></a>
+  <a href="profile.html"><i data-lucide="user"></i></a>
 </div>
 
 <script>
