--- a/user.html
+++ b/user.html
@@ -248,12 +248,13 @@ html, body {
 </div>
 
 <div class="bottom-nav">
-<a href="index.html">🏠</a>
-<a href="search.html">🔍</a>
-<a href="publish.html">➕</a>
-<a href="reels.html">🎞️</a>
-<a href="profile.html">👤</a>
+  <a href="index.html"><i data-lucide="home"></i></a>
+  <a href="search.html"><i data-lucide="search"></i></a>
+  <a href="publish.html"><i data-lucide="plus-circle"></i></a>
+  <a href="reels.html"><i data-lucide="video"></i></a>
+  <a href="profile.html"><i data-lucide="user"></i></a>
 </div>
+
 
 <script>
 const params = new URLSearchParams(window.location.search);
