--- a/user.html
+++ b/user.html
@@ -213,46 +213,63 @@ html, body {
 </style>
 </head>
 <body>
-<!-- (script block and HTML unchanged) -->
-<div id="app-frame">
-     <div class="content-wrapper">
-<header id="username">@username</header>
-<div id="live-stats">
-<div>Minutes Wasted: <span id="stat-minutes">0</span></div>
-<div>Scrolls Done: <span id="stat-scrolls">0</span></div>
-<div>Likes Given: <span id="stat-likes">0</span></div>
-<div>Comments Given: <span id="stat-comments">0</span></div>
-<div>Reposts Done: <span id="stat-reposts">0</span></div>
-<div>Bookmarks: <span id="stat-bookmarks">0</span></div>
-<div>Reels Viewed: <span id="stat-reels">0</span></div>
-<div>Stories Viewed: <span id="stat-stories">0</span></div>
-<div>Posts Posted: <span id="stat-posts">0</span></div>
-<div>Profiles Visited: <span id="stat-profiles">0</span></div>
-</div>
+<!-- (keep your script block and other stuff above) -->
+
 <div class="layout-wrapper">
 
-<div class="profile">
-<img id="avatar" src="" alt="avatar">
-<div class="stats">
-<div class="stat"><strong id="postCount">0</strong> posts</div>
-<div class="stat"><strong>0</strong> followers</div>
-<div class="stat"><strong>0</strong> following</div>
-</div>
-</div>
+  <div id="live-stats">
+    <div>Minutes Wasted: <span id="stat-minutes">0</span></div>
+    <div>Scrolls Done: <span id="stat-scrolls">0</span></div>
+    <div>Likes Given: <span id="stat-likes">0</span></div>
+    <div>Comments Given: <span id="stat-comments">0</span></div>
+    <div>Reposts Done: <span id="stat-reposts">0</span></div>
+    <div>Bookmarks: <span id="stat-bookmarks">0</span></div>
+    <div>Reels Viewed: <span id="stat-reels">0</span></div>
+    <div>Stories Viewed: <span id="stat-stories">0</span></div>
+    <div>Posts Posted: <span id="stat-posts">0</span></div>
+    <div>Profiles Visited: <span id="stat-profiles">0</span></div>
+  </div>
 
-<div class="bio">Too cool to achieve anything. Just stats.</div>
+  <div id="app-frame">
 
-<div class="stat-grid" id="statGrid"></div>
-</div>
+    <div class="content-wrapper">
 
-<div class="bottom-nav">
-  <a href="index.html"><i data-lucide="home"></i></a>
-  <a href="search.html"><i data-lucide="search"></i></a>
-  <a href="publish.html"><i data-lucide="plus-circle"></i></a>
-  <a href="reels.html"><i data-lucide="video"></i></a>
-  <a href="profile.html"><i data-lucide="user"></i></a>
-</div>
+      <header id="username">@username</header>
 
+      <div class="profile">
+        <img id="avatar" src="" alt="avatar">
+        <div class="stats">
+          <div class="stat"><strong id="postCount">0</strong> posts</div>
+          <div class="stat"><strong>0</strong> followers</div>
+          <div class="stat"><strong>0</strong> following</div>
+        </div>
+      </div>
+
+      <div class="bio">Too cool to achieve anything. Just stats.</div>
+
+      <div class="stat-grid" id="statGrid"></div>
+
+    </div> <!-- closes .content-wrapper -->
+
+    <div class="bottom-nav">
+      <a href="index.html"><i data-lucide="home"></i></a>
+      <a href="search.html"><i data-lucide="search"></i></a>
+      <a href="publish.html"><i data-lucide="plus-circle"></i></a>
+      <a href="reels.html"><i data-lucide="video"></i></a>
+      <a href="profile.html"><i data-lucide="user"></i></a>
+    </div>
+
+  </div> <!-- closes #app-frame -->
+
+</div> <!-- closes .layout-wrapper -->
+
+<!-- (scripts for Lucide icons at very bottom) -->
+<script src="https://unpkg.com/lucide@latest"></script>
+<script>
+  lucide.createIcons();
+</script>
+
+</body>
 
 <script>
 const params = new URLSearchParams(window.location.search);
